modules/gdscript/tests/scripts/analyzer/errors/nullable_access_operator_method_call.gd
class A:
    var b: A?
    func banana():
        pass
func test():
    var foo := A.new()
    foo?.b.banana()
